@@ -1,3 +1,14 @@
+2004-11-09  Francois Dumont  <dums@stlport...>
+
+	* test/unit/config_test.cpp: Creation of a test case to check correct
+	platform/compiler configuration.
+
+	* stlport/config/stl_msvc.h: Definition of the _STLP_HAS_NATIVE_FLOAT_ABS
+	now start with MSVC6.
+	
+	* stlport/cstdlib, stl/_cmath.h: Addition of some missing math function
+	 overloads for MSVC6.
+	
 2004-11-05  Francois Dumont  <dums@stlport...>
 
 	* stlport/config/stl_msvc.h: Definition of the _STLP_HAS_NATIVE_FLOAT_ABS
